a1/brendan_gordon/TEST_PROGRAMS/invalidtype/prabhjot_sandhu/incompatible.min
var x:int;
var y:string;
var z:string;

read x;
read y;

z = x + y;
print z;

